--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.18",
     "bcrypt-ts": "^5.0.0",
     "drizzle-orm": "^0.29.2",
+    "formik": "^2.4.6",
     "geist": "^1.2.0",
     "next": "^14.0.4",
     "next-auth": "5.0.0-beta.4",
